@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.12 2005-08-23 21:10:15 achu Exp $
+## $Id: Makefile.am,v 1.13 2005-08-25 18:23:42 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -25,7 +25,7 @@ BGL_CIOD_STATIC_SOURCES = cerebro_metric_bgl_ciod.c
 endif
 
 if WITH_STATIC_MODULES
-noinst_LTLIBRARIES = libmetricmodules.la
+noinst_LTLIBRARIES = libstaticmetricmodules.la
 else
 modulelibdir = $(CEREBRO_MODULE_DIR)
 modulelib_LTLIBRARIES = $(BOOTTIME_METRIC_MODULE) \
@@ -35,14 +35,14 @@ endif
 
 MODULE_FLAGS = -module -avoid-version
 
-libmetricmodules_la_SOURCES = $(BOOTTIME_STATIC_SOURCES) \
-			      $(SLURM_STATE_STATIC_SOURCES) \
-			      $(BGL_CIOD_STATIC_SOURCES)
-libmetricmodules_la_CFLAGS = -I$(srcdir)/../../libs/include \
-			     -I$(srcdir)/../../libs/common \
-			     -I$(srcdir)/../../libs/debug \
-			     -I$(srcdir)/../../libs/util
-libmetricmodules_la_LDFLAGS = $(METRIC_OTHER_FLAGS)
+libstaticmetricmodules_la_SOURCES = $(BOOTTIME_STATIC_SOURCES) \
+			      	    $(SLURM_STATE_STATIC_SOURCES) \
+			      	    $(BGL_CIOD_STATIC_SOURCES)
+libstaticmetricmodules_la_CFLAGS = -I$(srcdir)/../../libs/include \
+			     	   -I$(srcdir)/../../libs/common \
+			     	   -I$(srcdir)/../../libs/debug \
+			     	   -I$(srcdir)/../../libs/util
+libstaticmetricmodules_la_LDFLAGS = $(METRIC_OTHER_FLAGS)
 
 cerebro_metric_boottime_la_SOURCES = cerebro_metric_boottime.c
 cerebro_metric_boottime_la_LDFLAGS = $(MODULE_FLAGS) \
