@@ -1,6 +1,8 @@
 2005-08-25  Albert Chu  <chu11@llnl.gov>
 
 	* Update spec file for bglion build.
+
+	* Split modules lib into libs based on module type. 
 	
 2005-08-24  Albert Chu  <chu11@llnl.gov>
 
